completing Grades and scope exercises.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -215,7 +215,8 @@
 
                         </div>
                     </div>
-                    <!-- This is the End of my modal -->                </div>
+                    <!-- This is the End of my modal -->
+                </div>
             </div>
 
 
@@ -228,31 +229,25 @@
         </div>
 
         <!-- Start of Footer-->
-        <div style="padding-top: 1%">
-            <footer>
+        <footer>
             <div class="row">
                 <div class="col-xs-6">
-                    <div style="color: black;">
-                        © 2016 LTA, LLC
-                    </div>
+                    <div>© 2016 LTA, LLC</div>
                 </div>
                 <div class="col-xs-6">
                     <!-- Social Media -->
                     <div>
                         <div class="text-center center-block">
-                            <a href="https://www.facebook.com/"><i class="fa fa-facebook fa-2x" style="color: black"></i></a>
-                            <a href="https://twitter.com/lloydtheandroid"><i class="fa fa-twitter fa-2x" style="color: black"></i></a>
-                            <a href="https://github.com/lloydtheandroid"><i class="fa fa-github fa-2x" style="color: black"></i></a>
-                            <a href="https://plus.google.com/"><i class="fa fa-google-plus fa-2x" style="color: black"></i></a>
-                            <a href="mailto:lloyd.h.garrison@gmail.com"><i class="fa fa-envelope fa-2x" style="color: black"></i></a>
+                            <a href="https://www.facebook.com/"><i class="fa fa-facebook fa-2x"></i></a>
+                            <a href="https://twitter.com/lloydtheandroid"><i class="fa fa-twitter fa-2x"></i></a>
+                            <a href="https://github.com/lloydtheandroid"><i class="fa fa-github fa-2x"></i></a>
+                            <a href="https://plus.google.com/"><i class="fa fa-google-plus fa-2x"></i></a>
+                            <a href="mailto:lloyd.h.garrison@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </footer>
-        </div>
-
-
     </div>
     <script   src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
