--- a/Resume.html
+++ b/Resume.html
@@ -35,8 +35,7 @@
                             <li><a href="For_Testing.html">Messing Around</a></li>
                         </ul>
                         <div class="media" style="margin-top: 0;">
-                            <div class="media-body">
-                            </div>
+                            <div class="media-body"></div>
                             <div class="media-right hidden-xs">
                                 <p><img src="img/img_avatar1.png" class="media-object img-circle" style="width:40px"></p>
                             </div>
@@ -76,7 +75,6 @@
             </div>
 
             <!-- Start of top Panels -->
-
             <div class="row">
                 <div class="col-xs-12 col-md-6">
 
@@ -205,32 +203,29 @@
                     <a id="back-to-top" href="#top" class="btn btn-primary btn-lg back-to-top" role="button"><span class="glyphicon glyphicon-chevron-up"></span></a>
                 </div>
             </div>
-
+        </div>
             <!-- Start of Footer-->
-            <div style="padding-top: 1%">
-                <footer>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div style="color: black;">
-                                © 2016 LTA, LLC
-                            </div>
-                        </div>
-                        <div class="col-xs-6">
-                            <!-- Social Media -->
-                            <div>
-                                <div class="text-center center-block">
-                                    <a href="https://www.facebook.com/"><i class="fa fa-facebook fa-2x" style="color: black"></i></a>
-                                    <a href="https://twitter.com/lloydtheandroid"><i class="fa fa-twitter fa-2x" style="color: black"></i></a>
-                                    <a href="https://github.com/lloydtheandroid"><i class="fa fa-github fa-2x" style="color: black"></i></a>
-                                    <a href="https://plus.google.com/"><i class="fa fa-google-plus fa-2x" style="color: black"></i></a>
-                                    <a href="mailto:lloyd.h.garrison@gmail.com"><i class="fa fa-envelope fa-2x" style="color: black"></i></a>
-                                </div>
-                            </div>
+        <footer>
+            <div class="row">
+                <div class="col-xs-6">
+                    <div>
+                        © 2016 LTA, LLC
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <!-- Social Media -->
+                    <div>
+                        <div class="text-center center-block">
+                            <a href="https://www.facebook.com/"><i class="fa fa-facebook fa-2x"></i></a>
+                            <a href="https://twitter.com/lloydtheandroid"><i class="fa fa-twitter fa-2x"></i></a>
+                            <a href="https://github.com/lloydtheandroid"><i class="fa fa-github fa-2x"></i></a>
+                            <a href="https://plus.google.com/"><i class="fa fa-google-plus fa-2x"></i></a>
+                            <a href="mailto:lloyd.h.garrison@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
                         </div>
                     </div>
-                </footer>
+                </div>
             </div>
-        </div>
+        </footer>
     </div>
     <script   src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
