--- a/Welcome.html
+++ b/Welcome.html
@@ -14,33 +14,28 @@
     <div class="container">
 
         <!-- Begin Navbar / Header  top -->
-        <header class="bs-docs-nav navbar navbar-static-top" style="margin-top: 7px" id="top">
+        <header class="page-header bs-docs-nav navbar navbar-static-top" style="margin-top: 7px" id="top">
             <div class="container">
                 <div class="navbar-header">
                     <button aria-controls="bs-navbar" aria-expanded="false" class="navbar-toggle collapsed"
                             data-target="#bs-navbar" data-toggle="collapse" type="button">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar" style="background-color: #6f16a1"></span>
-                        <span class="icon-bar" style="background-color:#6f16a1"></span>
-                        <span class="icon-bar" style="background-color: #6f16a1"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
-                    <a href="Welcome.html" class="navbar-brand ." style="font-size: larger; font-family: 'Futura';
-                    color: #6f16a1; border: solid #6f16a1; padding: 10px; background-color: lightgray; float: left;">LtA</a>
+                    <a href="../" class="navbar-brand">LtA</a>
                 </div>
                 <nav class="collapse navbar-collapse" id="bs-navbar">
-                    <div class="container-fluid">
+                    <div class="container-fluid col-md-6">
                         <ul class="nav navbar-nav">
                             <li><a href="Resume.html">Resume</a></li>
                             <li><a href="Portfolio.html">Portfolio</a></li>
                             <li><a href="For_Testing.html">Messing Around</a></li>
                         </ul>
-                        <div class="media" style="margin-top: 0;">
-                            <div class="media-body">
-                            </div>
-                            <div class="media-right hidden-xs">
-                                <p><img src="img/img_avatar1.png" class="media-object img-circle" style="width:40px;"></p>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="col-md-1">
+                        <img src="img/img_avatar1.png" class="img-circle">
                     </div>
                 </nav>
             </div>
@@ -48,7 +43,7 @@
 
         <!-- End Navbar top -->
 
-        <main>
+        <main class="container">
             <div class="hover">
                 <h1>Welcome</h1>
             </div>
@@ -66,7 +61,7 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="http://placehold.it/500x300/ff0000/000000" alt="" style="width:100%">
+                        <img src="http://placehold.it/500x300/ff0000/000000" alt="">
                         <div class="carousel-caption">
                             <h3>Red</h3>
                             <p>This is the first Picture.</p>
@@ -74,14 +69,14 @@
                     </div>
 
                     <div class="item">
-                        <img src="http://placehold.it/500x300/00ff00/000000" alt="" style="width:100%">
+                        <img src="http://placehold.it/500x300/00ff00/000000" alt="">
                         <div class="carousel-caption">
                             <h3>Green</h3>
                             <p>This is the second Picture.</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img  src="http://placehold.it/500x300/0000ff/000000" alt="" style="width:100%">
+                        <img  src="http://placehold.it/500x300/0000ff/000000" alt="">
                         <div class="carousel-caption">
                             <h3>Blue</h3>
                             <p>This is the third picture</p>
@@ -89,7 +84,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="http://placehold.it/500x300/ff00ff/000000" alt="" style="width:100%">
+                        <img src="http://placehold.it/500x300/ff00ff/000000" alt="">
                         <div class="carousel-caption">
                             <h3>Purple</h3>
                             <p>This is the fourth Picture</p>
@@ -116,29 +111,27 @@
             </div>
         </main>
         <!-- Start of Footer-->
-        <div style="padding-top: 1%">
-            <footer>
-                <div class="row">
-                    <div class="col-xs-6">
-                        <div style="color: black;">
-                            © 2016 LTA, LLC
-                        </div>
+        <footer class="container">
+            <div class="row container">
+                <div class="col-xs-6">
+                    <div>
+                        © 2016 LTA, LLC
                     </div>
-                    <div class="col-xs-6">
-                        <!-- Social Media -->
-                        <div>
-                            <div class="text-center center-block">
-                                <a href="https://www.facebook.com/"><i class="fa fa-facebook fa-2x" style="color: black"></i></a>
-                                <a href="https://twitter.com/lloydtheandroid"><i class="fa fa-twitter fa-2x" style="color: black"></i></a>
-                                <a href="https://github.com/lloydtheandroid"><i class="fa fa-github fa-2x" style="color: black"></i></a>
-                                <a href="https://plus.google.com/"><i class="fa fa-google-plus fa-2x" style="color: black"></i></a>
-                                <a href="mailto:lloyd.h.garrison@gmail.com"><i class="fa fa-envelope fa-2x" style="color: black"></i></a>
-                            </div>
+                </div>
+                <div class="col-xs-6">
+                    <!-- Social Media -->
+                    <div>
+                        <div class="text-center center-block">
+                            <a href="https://www.facebook.com/"><i class="fa fa-facebook fa-2x"></i></a>
+                            <a href="https://twitter.com/lloydtheandroid"><i class="fa fa-twitter fa-2x"></i></a>
+                            <a href="https://github.com/lloydtheandroid"><i class="fa fa-github fa-2x"></i></a>
+                            <a href="https://plus.google.com/"><i class="fa fa-google-plus fa-2x"></i></a>
+                            <a href="mailto:lloyd.h.garrison@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
                         </div>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
     </div>
     <script   src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
