--- a/For_Testing.html
+++ b/For_Testing.html
@@ -15,18 +15,17 @@
     <div class="container">
 
         <!-- Begin Navbar / Header  top -->
-        <header class="bs-docs-nav navbar navbar-static-top" style="margin-top: 7px" id="top">
+        <header class="bs-docs-nav navbar navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
                     <button aria-controls="bs-navbar" aria-expanded="false" class="navbar-toggle collapsed"
                             data-target="#bs-navbar" data-toggle="collapse" type="button">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar" style="background-color: #6f16a1"></span>
-                        <span class="icon-bar" style="background-color:#6f16a1"></span>
-                        <span class="icon-bar" style="background-color: #6f16a1"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
-                    <a href="Welcome.html" class="navbar-brand ." style="font-size: larger; font-family: 'Futura';
-                    color: #6f16a1; border: solid #6f16a1; padding: 10px; background-color: lightgray; float: left;">LtA</a>
+                    <a href="Welcome.html" class="navbar-brand">LtA</a>
                 </div>
                 <nav class="collapse navbar-collapse" id="bs-navbar">
                     <div class="container-fluid">
@@ -35,7 +34,7 @@
                             <li><a href="Portfolio.html">Portfolio</a></li>
                             <li><a href="For_Testing.html">Messing Around</a></li>
                         </ul>
-                        <div class="media" style="margin-top: 0;">
+                        <div class="media">
                             <div class="media-body">
                             </div>
                             <div class="media-right hidden-xs">
@@ -54,6 +53,7 @@
                 <div class="row row-padded row-bordered row-centered">
                     <div class="col-sm-12">
                         <div class="row">
+
                             <!-- Start of First panel -->
                             <div class="col-md-4 m-b-lg">
                                 <div class="panel panel-default panel-profile m-b-0">
