(99% finished) calculator project - still need to do percent button and merge functions (i.e. Numberpad, operators, etc.) Google API.

--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,8 @@
             width: 300px;
             margin: 0 2% 0 2%;
             padding: 0 5% 3% 5%;
-            border: solid dimgray;
+            border-right: solid dimgray;
+            border-right: solid dimgray;
             border-radius: 3%;
             background: lightcyan; /* For browsers that do not support gradients */
             background: linear-gradient(125deg, lightcyan , dimgray); /* Standard syntax */
@@ -143,11 +144,14 @@
         <div class="col-xs-2 showhim">
             <div class="showme"><h6>Get Schwifty in here!</h6><a><img src="img/SaYmoW6.gif" class="img-responsive"></a></div>
             <div class="ok"><a><img src="img/rickTwerk.gif" class="img-responsive img-circle imgLeft"><h6>Get Schwifty!</h6></a></div>
-
         </div>
+
+        <!-- The entire Calculator -->
         <div class="container calculator col-xs-8">
-            <!--// Calculator input display-->
             <p class="schwifty">::The Rick'N'ator 2000::</p>
+
+
+            <!--// Calculator input display-->
             <div class="row">
                 <div class="col-xs-5 display">
                     <input type="text" class="form-control" placeholder="What's " id="displayLeft" >
@@ -180,15 +184,15 @@
             <!-- 7, 8, 9, multiply-->
             <div class="row">
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="seven">7</button>
+                    <button class="btn btn-default numPad" id="seven">7</button>
                 </div>
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="eight">8</button>
+                    <button class="btn btn-default numPad" id="eight">8</button>
                 </div>
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="nine">9</button>
+                    <button class="btn btn-default numPad" id="nine">9</button>
                 </div>
 
                 <div class="col-xs-3">
@@ -200,15 +204,15 @@
             <div class="row">
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="four">4</button>
+                    <button class="btn btn-default numPad" id="four">4</button>
                 </div>
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="five">5</button>
+                    <button class="btn btn-default numPad" id="five">5</button>
                 </div>
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="six">6</button>
+                    <button class="btn btn-default numPad" id="six">6</button>
                 </div>
 
                 <div class="col-xs-3">
@@ -221,15 +225,15 @@
             <div class="row">
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="one">1</button>
+                    <button class="btn btn-default numPad" id="one">1</button>
                 </div>
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="two">2</button>
+                    <button class="btn btn-default numPad" id="two">2</button>
                 </div>
 
                 <div class="col-xs-3">
-                    <button class="btn btn-default" id="three">3</button>
+                    <button class="btn btn-default numPad" id="three">3</button>
                 </div>
 
                 <div class="col-xs-3">
